<resources>
    <string name="app_name">CheckUp ✔</string>
    <string name="action_settings">Settings</string>
    <string name="past_sessions">Past Sessions</string>
    <string name="hr_calc">HR Calc</string>
    <string name="accel">Accelerometers Overview</string>
    <string name="accel_x">x:</string>
    <string name="accel_y">y:</string>
    <string name="accel_z">z:</string>
    <string name="bvp_label">BVP</string>
    <string name="bvpfiltered_label">BVP Filtered</string>
    <string name="eda_label">EDA</string>
    <string name="ibi_label">IBI</string>
    <string name="emptyText">-</string>
    <string name="temp_label">Temperature</string>
    <string name="battery_label">Battery</string>

</resources>
